--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,17 @@
 .right{
     position: absolute;
     right: 2em;
-    top: 3em;
+    top: 3.5em;
 }
 
 body {
     background-image: url(../images/eziobg.png);
+}
+
+#buttons {
+    margin-top: 3em;
+    margin-left: 2em;
+}
+button{
+    margin-right: 1em;
 }
