--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .right{
     position: absolute;
     right: 2em;
-    top: 3.5em;
+    top: 3em;
 }
 
 body {
@@ -10,9 +10,13 @@ body {
 }
 
 #buttons {
-    margin-top: 3em;
+    margin-top: 5em;
     margin-left: 2em;
 }
 button{
     margin-right: 1em;
+}
+
+#search{
+    right: 8em;
 }
